<resources>
    <string name="app_name">hieucap-17k3</string>
    <string name="menu_bai_tap">MENU</string>
    <string name="bai_tap_1">Login Screen</string>
    <string name="bai_tap_2">Calculator</string>
    <string name="bai_tap_3">Recycler View</string>
    <string name="person_1">Nguyen Van A</string>
    <string name="person_2">Nguyen Van B</string>
    <string name="person_3">Nguyen Van C</string>
    <string name="person_4">Nguyen Van D</string>
    <string name="person_5">Nguyen Van E</string>
    <string name="person_6">Nguyen Van F</string>
    <string name="person_7">Nguyen Van G</string>
    <string name="person_8">Nguyen Van H</string>
    <string name="text_status_standard">This is ...........................</string>
    <string name="text_status_max_length">This is ................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
    <string name="value_1">1</string>
    <string name="welcome_caption">Welcome to urbi</string>
    <string name="login_with_facebook">LOG IN WITH FACEBOOK</string>
    <string name="or">or</string>
    <string name="login_with_phone_number">LOG IN WITH PHONE NUMBER</string>
    <string name="new_to_urbi">New to urbi?</string>
    <string name="enter_number">Enter mobile number</string>
    <string name="slogan">a bike for everyone, always</string>
    <string name="sign_up">Sign up for an account</string>
    <string name="enter_your">Enter your details below to get started</string>
    <string name="enter_your_detail_to_get_started">+61</string>
    <string name="Enter_number">Enter mobile number</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="text_link_check_color_black">I have read and agree with the</string>
    <string name="text_link_check_color_blue">terms and conditions</string>
    <string name="text_the_rest">.</string>
    <string name="text_email">caphieu@gmail.com</string>
    <string name="contain">Activity Contain</string>
    <string name="text_inbox">Inbox</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="address_google_photo">com.google.android.apps.photos</string>
    <string name="click">Click here</string>
    <string name="text_save">ahihi</string>
    <string name="file_name">abc.txt</string>
    <string name="text_error">Error</string>
    <string name="folder_name">/Hieu/</string>
    <string name="exercises_save_data">Exercises save data</string>
    <string name="btnSharePreference">Share Preference</string>
    <string name="database">Database</string>
    <string name="slogan_is_empty">Slogan is empty</string>
    <string name="in_external">In External</string>
    <string name="event_company_is_empty">Company is empty</string>
    <string name="division">/</string>
    <string name="mul">*</string>
    <string name="sub">-</string>
    <string name="sum">+</string>
    <string name="event_first_term_is_empty">First term is not empty !</string>
    <string name="event_second_term_is_empty">Second term is not empty !</string>
    <string name="event_two_term_is_empty">First term and second term is not empty !</string>
    <string name="text_null"> </string>
    <string name="event_second_term_is_value_0">Second term is not value = 0 !</string>
    <string name="start">Start</string>
    <string name="percent_start">0%</string>
    <string name="tv_skip">SKIP</string>
    <string name="tv_1">Fragment 1</string>
    <string name="tv_2">Fragment 2</string>
    <string name="tv_3">Fragment 3</string>
    <string name="event_update">Update</string>
    <string name="menu">Menu</string>
    <string name="information">Information</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="message">Do you want to skip ?</string>
    <string name="event_cancel">Cancel</string>
    <string name="event_submit">OK</string>
    <string name="text_english">ENGLISH</string>
    <string name="text_vietnamese">VIET NAM</string>
    <string name="bai_tap_6">Drawer Layout</string>
    <string name="bai_tap_5">Save data</string>
    <string name="value_0">0</string>
    <string name="from_drawable">Drawable</string>
    <string name="from_asset">Asset</string>
    <string name="from_storage">Storage</string>
    <string name="from_internet">Internet</string>
    <string name="text_load_image">Load Image</string>
    <string name="text_image_vector">Image Vector</string>
    <string name="text_nine_path">Nine Path</string>
    <string name="bai_tap_4">Load Image</string>
    <string name="bai_tap_7">View pager</string>
    <string name="monday">Mon</string>
    <string name="sunday">Sun</string>
    <string name="bai_tap_8">Thread-Handler</string>
    <string name="exercise_week_5">Exercise week 5</string>
    <string name="thread_handler">Thread handler</string>
    <string name="count_down_timer">Count down timer</string>
    <string name="title_send">Send</string>
    <string name="title_result">Result</string>
    <string name="download" formatted="false">
        Downloading %d Byte / %d Byte ( %.0f
    </string>
    <string name="download_error">Download error</string>
    <string name="disconnect_error">Disconnect error</string>
    <string name="close_error">Close input stream, output stream error</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="unit_test">Unit test</string>
    <string name="login">Login</string>
    <string name="username_empty">Username is empty</string>
    <string name="test_username_length">Username length is not allowed</string>
    <string name="test_username_digit_number">Username above two number</string>
    <string name="test_username_capital_letter">Username not enough capital letter</string>
    <string name="test_username_have_space">Username have character space</string>
    <string name="test_username_special_character">Username have special character</string>
    <string name="test_username_upper_case_or_lower_case">Username is case sensitive</string>
    <string name="password_empty">Password is empty</string>
    <string name="test_password_length">Password length is not allowed</string>
    <string name="test_password_different_username">Password is not different username</string>
    <string name="test_password_character_special_and_digit_number">Password have at least one special character or character number</string>
    <string name="test_password_have_space">Password have character space</string>
    <string name="test_password_capital_letter">Password not enough three capital letters</string>
    <string name="test_password_same_character">Password have character overlap more than two times</string>
    <string name="test_done">Done</string>
    <string name="text_kilometer">KM</string>
    <string name="success_login">Congratulations on your successful login !!!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="status_screen_1">Welcome</string>
    <string name="status_screen_2">Be unique</string>
    <string name="status_screen_3">Get started</string>
    <string name="slogan_screen_1">Express yourself through \n the art of the fashionism.</string>
    <string name="slogan_screen_2">Your profile is \n your \n online art gallery.</string>
    <string name="slogan_screen_3">Inspire everyone with the \n power of your ideas.</string>
    <string name="join_us">JOIN US</string>
    <string name="text_join_us">Join us</string>
    <string name="text_next">Next</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_status_sign_in">Good to see you \n again</string>
    <string name="text_corporate_e_mail">Corporate e-mail</string>
    <string name="text_forgot_your_password">Forgot your password?</string>
    <string name="text_status_join_us">Welcome \n aboard</string>
    <string name="test_name">Name</string>
    <string name="bai_tap_9">Kotlin</string>
    <string name="text_key">step</string>
</resources>
