<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/exercises_save_data"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSharePreference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/btnSharePreference"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnInExternal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSharePreference"
        android:layout_marginTop="20dp"
        android:text="@string/in_external"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnInExternal"
        android:layout_marginTop="20dp"
        android:text="@string/database"
        android:textSize="20dp" />
</RelativeLayout>
