<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/new_to_urbi"
        android:textColor="@color/blue"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/value_0"
        android:textColor="@color/blue"
        android:textSize="30dp"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPhoneNumber"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/welcome_caption"
        android:textColor="@color/blue"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/event_update" />
</RelativeLayout>
