<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="30dp">

    <TextView
        android:id="@+id/tvExerciseWeekFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_week_5"
        android:textColor="@color/colorRed"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnThreadHandler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvExerciseWeekFive"
        android:layout_marginTop="60dp"
        android:text="@string/thread_handler"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnCountDownTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnThreadHandler"
        android:layout_marginTop="20dp"
        android:text="@string/count_down_timer"
        android:textSize="20dp" />
</RelativeLayout>
