<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:id="@+id/tvWelCome"
        style="@style/boldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_caption"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnLogInFB"
        style="@style/btn_loginFb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWelCome"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_cornice_log_in_fb"
        android:text="@string/login_with_facebook"
        android:textSize="18dp" />

    <RelativeLayout
        android:id="@+id/rlOr"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/btnLogInFB">

        <View
            android:id="@+id/viewLineLeft"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="26dp"
            android:layout_toLeftOf="@+id/tvOr"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:text="@string/or"
            android:textSize="15dp" />

        <View
            android:id="@+id/viewLineRight"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="26dp"
            android:layout_toRightOf="@+id/tvOr"
            android:background="@android:color/darker_gray" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnLogInPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlOr"
        android:background="@drawable/bg_cornice_log_in_pn"
        android:text="@string/login_with_phone_number"
        android:textColor="@color/colorBlue"
        android:textSize="18dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/btnLogInPhone"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/blackText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="right|center"
            android:text="@string/new_to_urbi"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/sign_up"
            android:textColor="@color/colorBlue"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
