<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewContain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:src="@drawable/ic_back_sign_in" />

        <TextView
            android:id="@+id/tvNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"
            android:text="@string/text_next"
            android:textColor="@color/colorNextHint"
            android:textSize="30dp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgBack"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/text_sign_in"
            android:textColor="@android:color/black"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSignIn"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/text_status_sign_in"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvStatus"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_gray_bottom_line"
            android:hint="@string/text_corporate_e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorTextSignIn"
            android:textCursorDrawable="@drawable/bg_color_orange_cursor"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_not_bottom_line"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorTextSignIn"
            android:textCursorDrawable="@drawable/bg_color_orange_cursor"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtPassword"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/text_forgot_your_password"
            android:textColor="@color/colorTextSignIn"
            android:textSize="20dp" />
    </RelativeLayout>
</ScrollView>
