<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/lnFillOutNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText

            android:id="@+id/edtFirstTerm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_edt_fill"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvOperation"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtSecondTerm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_edt_fill"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnOperation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lnFillOutNumber"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSum"
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sum"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnSub"
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/sub"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnMul"
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/mul"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnDivision"
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/division"
            android:textSize="20dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvResult"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lnOperation"
        android:background="@color/pink"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />
</RelativeLayout>
